# Information-System

./: CMakeLists.txt  Controller.cpp  Controller.h  FileWorker.cpp  FileWorker.h  Header.h  List.cpp  List.h  Manifest.cpp  Manifest.h  Node.cpp  Node.h  README.md  Table.cpp  Table.h  TableProperties.cpp  TableProperties.h  TablePropertiesWorker.cpp  TablePropertiesWorker.h  TypeOfNote.cpp  TypeOfNote.h  View.cpp  View.h  main.cpp
Basic Units/: Action.cpp  Action.h  CSVWorker.cpp  CSVWorker.h  FilePath.h  FilterRequest.h  List.cpp  List.h  Node.cpp  PreSortRequest.h  Request.h  TypeOfNote.cpp  TypeOfNote.h  UserRequest.cpp  UserRequest.h
Basic Units/Filter Request/: FilterRequest.h  UserRequest.cpp  UserRequest.h
Basic Units/List/: List.cpp  List.h  Node.cpp
Basic Units/RB Tree/: RBTNode.h  RBTree.h
Basic Units/Sort Request/: PreSortRequest.h  SortRequest.h
Basic Units/Trie/: Trie.cpp  Trie.h  TrieNode.h
CSV Workers/: CSVReader.cpp  CSVReader.h  CSVWorker.h  CSVWriter.cpp  CSVWriter.h
CSVWorkers/: CSVReader.h  CSVWorker.cpp  CSVWriter.h
Controller Layer/: Controller.cpp  Controller.h  Filter.cpp  Filter.h  Printer.cpp  Sorter.cpp  Sorter.h
Controller Layer/CSVWorkers/: CSVWorker.cpp  CSVWorker.h  Filter.h
Controller Layer/Sorters/: Sortable.h  Sorter.cpp  Sorter.h
Controller Layer/Sorters/RB Tree/: RBTNode.cpp  RBTNode.h  RBTree.cpp  RBTree.h
Controller Layer/Sorters/Sorter/: Sorter.h
Controller Layer/Sorters/Trie/: Trie.cpp  Trie.h  TrieNode.cpp  TrieNode.h
DAT Workers/: DATReader.cpp  DATReader.h  DATWriter.cpp  DATWriter.h
DEPRECATED/: Manifest.h
DEPRECATED/File Workers/: FileWorker.cpp  FileWorker.h  TableDataWorker.cpp  TableDataWorker.h  TablePropertiesWorker.cpp  TablePropertiesWorker.h
File Workers/: FileReader.cpp  FileReader.h  FileWorker.cpp  FileWorker.h  FileWriter.cpp  FileWriter.h
Model Layer/: FileWorker.cpp  FileWorker.h  Manifest.h  Printer.h  Table.cpp  Table.h  TableProperties.h  TablePropertiesWorker.h
Model Layer/File Workers/: FileWorker.cpp  FileWorker.h  Manifest.cpp  Manifest.h  TableDataWorker.cpp  TableDataWorker.h  TablePropertiesWorker.cpp  TablePropertiesWorker.h
Model Layer/File Workers/Data Workers/: TableDataWorker.cpp  TableDataWorker.h  TableNotes.cpp  TableNotes.h
View Layer/: Parser.cpp  Parser.h  Printer.cpp  Printer.h  View.cpp  View.h
